<resources>
    <string name="app_name">SureSave</string>
    <string name="facebook">Facebook</string>
    <string name="iniciar_email">Continuar con email</string>
    <string name="bienvenido">BIENVENIDO A SURE SAVE</string>
    <string name="descripcion" />
    <string name="bienvenido2">GESTIONA GASTOS</string>
    <string name="bienvenido3">GESTIONA INGRESOS</string>
    <string name="bienvenido4">EMPIEZA A AHORRAR</string>
    <string name="title_activity_login">Login</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrar">REGISTRAR</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="home">Principal</string>
    <string name="goal">Metas</string>
    <string name="filtro">Filtro</string>
    <string name="cuenta">Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_usuario">Jhon</string>
    <string name="ingresos">Ingresos</string>
    <string name="cantidad">10000</string>
    <string name="gastos">Gastos</string>
    <string name="bizum">Bizum</string>
    <string name="transferencia">Trasferencia</string>
    <string name="otros">Otros</string>
    <string name="nomina">Nómina</string>
    <string name="añadir">Añadir</string>
    <string name="comida">Comida</string>
    <string name="ropa">Ropa</string>
    <string name="libro">Libro</string>
    <string name="informatica">Informática</string>
    <string name="transporte">Transporte</string>
    <string name="fecha">dd/MM/aaaa</string>
    <string name="categoria">Kebab</string>
</resources>