<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="@android:color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/terciario">

        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/fecha"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/descricion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fecha"
            android:backgroundTint="@color/secundario">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secundario">

                <LinearLayout
                    android:id="@+id/barra_indicador"
                    android:layout_width="10dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:background="@color/rojo"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" />

                <ImageView
                    android:id="@+id/imagen_categorias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/barra_indicador"
                    android:contentDescription="@string/descripcion"
                    android:src="@drawable/restaurant" />

                <TextView
                    android:id="@+id/categoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/imagen_categorias"
                    android:fontFamily="@font/bold"
                    android:text="@string/categoria"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/cantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toStartOf="@+id/imagen_euro"
                    android:layout_toEndOf="@+id/categoria"
                    android:fontFamily="@font/normal"
                    android:text="@string/cantidad"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imagen_euro"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/descripcion"
                    android:src="@drawable/ic_euro" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.cardview.widget.CardView>


